# noir-static-analyzer

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
lints/: Cargo.toml
lints/src/: lib.rs
noir_analyzer/: Cargo.toml
noir_analyzer/src/: lib.rs
noir_analyzer/src/ast/: analyzer.rs  ast_context.rs  mod.rs  parser.rs
noir_analyzer/src/diagnostics/: lint.rs  mod.rs  reporter.rs
noir_analyzer/src/lints/: lint_rule.rs  mod.rs  unused_function.rs
