[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "noir-analyzer"  # This is the name it will be installed as
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
noir_analyzer = { path = "../noir_analyzer" }
nargo = { workspace = true }
toml = "0.7.8"
serde = { version = "1.0.219", features = ["derive"] }